--- a/public/index.html
+++ b/public/index.html
@@ -280,7 +280,7 @@
 						data-endspeed="300"
 						data-endeasing="Power1.easeIn"
 						data-captionhidden="on"
-						style="z-index: 6">Loyalty + Data = Rewards for you!
+						style="z-index: 6">Your Data & Loyalty -->
 					</div>
 
 					<div class="tp-caption lightgrey_divider skewfromrightshort customout"
@@ -325,7 +325,7 @@
 						data-endspeed="300"
 						data-endeasing="Power1.easeIn"
 						data-captionhidden="on"
-						style="z-index: 6">5 Random large
+						style="z-index: 6">Data + Loyalty =
 					</div>
 
 					<div class="tp-caption large_bold_white customin ltl"
@@ -337,7 +337,7 @@
 						data-easing="Back.easeInOut"
 						data-endspeed="400"
 						data-endeasing="Back.easeIn"
-						style="z-index: 14"><em>Texts go here for pop!</em>
+						style="z-index: 14"><em>Rewards for you!</em>
 					</div>
 
 
