--- a/public/wedo.html
+++ b/public/wedo.html
@@ -78,29 +78,26 @@
 
                             <ul id="tiny">
 
-                                <li><a href="index.html" class="">Home</a></li>
+                                <li><a href="index" class="">Home</a></li>
 
-                                <li><a href="wedo.html" class="active">What We Do <i class="fa"></i></a>
+                                <li><a href="wedo" target="_self" class="active">What We Do <i class="fa"></i></a>
 
-                                </li>
-
-                                <li><a href="about.html">About Us <i class="fa"></i></a>
 
                                 </li>
 
-                                <li><a href="#">Choose Language <i class="fa fa-angle-down"></i></a>
+                                <li><a href="about">About Us <i class="fa"></i></a>
 
-                                    <ul>
-                                        <li><a href="#">English</a></li>
-                                        <li><a href="#">Chinese</a></li>
+                                </li>
+
+                                <li><a href="http://wordpress.com/echeckid">Blog </a></li>
+                                <li><a href="contact">Contact</a></li>
+
+                                <li style="background-color: gray; color: #000000; !important"><a href="#">English <i class="fa fa-angle-down"></i></a>
+
+                                    <ul style="width:120px; overflow: hidden; !important">
+                                        <li ><a href="#">Chinese</a></li>
                                     </ul>
                                 </li>
-
-                                <li><a href="#">Blog </a></li>
-                                <li><a href="mailto:info@echeckid.com" target="_blank">Contact</a></li>
-
-
-
 
                             </ul>
 
@@ -152,6 +149,10 @@
                 and a web interface for brand managers to directly interact with consumers.  Brand owners can deploy the eCheckID solution without having to install or maintain software.
                 Likewise, consumers can enjoy the assurance of product safety or special promotions using the free eCheckID app on their mobile device without giving up their privacy.
 
+                <br/><br/>
+                <div class="center">
+                    <img src="images/what_we_do.png" alt="" style="width: 100%; height: 80%; text-align:center !important"/>
+                </div>
             </div>
         </div>
 
@@ -186,7 +187,7 @@
         <span class="acc-trigger"><a href="#">Brand-Consumer Interaction</a></span>
         <div class="acc-container">
             <div class="content">
-                T<p>
+                <p>
                 With complex, multi-tier export-import, wholesale, brick and mortar retail and e-commerBrace sales channels, it is difficult, if not impossible, for the brand owner
                 to interact directly with each individual consumer.    For consumer products, just knowing who and where the consumers are by itself is an impossible task.   In case
                 of high-volume consumer packaged goods like cosmetics or nutritional products, the limited point-of-sale scan data is useless in establishing connection between the brand owner
@@ -270,11 +271,11 @@
 
 <div class="copyright_info">
 
-    <div class="container">
+    <div class="container center">
 
         <div class="one_half">
 
-            <b>Copyright © 2014 eCheckID.com. All rights reserved.  <a href="#">Terms of Use</a> | <a href="#">Privacy Policy</a></b>
+            <b>Copyright © 2014 eCheckID Corporation. All Rights Reserved. <br/> <a href="#">Terms of Use</a> | <a href="privacy">Privacy Policy</a></b>
 
         </div>
 
