--- a/public/contact.html
+++ b/public/contact.html
@@ -4,7 +4,7 @@
 <!--[if IE 9 ]>    <html lang="en-gb" class="isie ie9 no-js"> <![endif]-->
 <!--[if (gt IE 9)|!(IE)]><!--> <html lang="en-gb" class="no-js"> <!--<![endif]-->
 
-head>
+<head>
 <title>eCheckID</title>
 
 <meta charset="utf-8">
