removed dialog link from images and replaced with text

--- a/public/index.html
+++ b/public/index.html
@@ -336,12 +336,12 @@
         <div class="one_half">
             <h2>for <strong>Consumers</strong></h2>
             <br/><br/>
-            <div id='basic-modal'>
                 <p>
                     <a href='#' class='basic'><img src="images/for_con.png" style="width: 100%; height: 100%"/></a>
                 </p>
-            </div>
             <br/><br/>
+
+            <div id='basic-modal'> <p><a href='#' class='basic'>Read more on eCheckID "For Consumers"</a></p> </div>
 
         </div><!-- end new section -->
 
@@ -350,12 +350,13 @@
             <h2>for <strong>Brands</strong></h2>
 
             <br/><br/>
-            <div id='basic-modal1'>
                 <p>
-                    <a href='#' class='basic'> <img src="images/for_bra.png" style="width: 100%; height: 100%"/> </a>
+                    <img src="images/for_bra.png" style="width: 100%; height: 100%"/>
                 </p>
-            </div>
             <br/><br/>
+
+            <div id='basic-modal1'> <p><a href='#' class='basic'>Read more on eCheckID "For Brands"</a></p> </div>
+
         </div><!-- end people says section -->
 
 
