--- a/public/index.html
+++ b/public/index.html
@@ -337,7 +337,7 @@
             <h2>for <strong>Consumers</strong></h2>
             <br/><br/>
                 <p>
-                    <a href='#' class='basic'><img src="images/for_con.png" style="width: 100%; height: 100%"/></a>
+                    <img src="images/for_con.png" style="width: 100%; height: 100%"/>
                 </p>
             <br/><br/>
 
