changes based on 8.17 comments

--- a/public/chn/contact.html
+++ b/public/chn/contact.html
@@ -12,7 +12,7 @@
 <meta name="description" content="" />
 
 <!-- Favicon -->
-<link rel="shortcut icon" href="images/favicon.ico">
+<link rel="shortcut icon" href="../images/favicon.ico">
 
 <!-- this styles only adds some repairs on idevices  -->
 <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
@@ -26,26 +26,26 @@
 
 <!-- ######### CSS STYLES ######### -->
 
-<link rel="stylesheet" href="css/reset.css" type="text/css" />
-<link rel="stylesheet" href="css/style.css" type="text/css" />
+<link rel="stylesheet" href="../css/reset.css" type="text/css" />
+<link rel="stylesheet" href="../css/style.css" type="text/css" />
 
-<link rel="stylesheet" href="css/font-awesome/css/font-awesome.min.css">
+<link rel="stylesheet" href="../css/font-awesome/../css/font-awesome.min.css">
 
 <!-- responsive devices styles -->
-<link rel="stylesheet" media="screen" href="css/responsive-leyouts.css" type="text/css" />
+<link rel="stylesheet" media="screen" href="../css/responsive-leyouts.css" type="text/css" />
 
 
 <!-- style switcher -->
-<link rel = "stylesheet" media = "screen" href = "js/style-switcher/color-switcher.css" />
+<link rel = "stylesheet" media = "screen" href = "../js/style-switcher/color-switcher.css" />
 
 <!-- sticky menu -->
-<link rel="stylesheet" href="js/sticky-menu/core.css">
+<link rel="stylesheet" href="../js/sticky-menu/core.css">
 
 <!-- faqs -->
-<link rel="stylesheet" href="js/accordion/accordion.css" type="text/css" media="all">
+<link rel="stylesheet" href="../js/accordion/accordion.css" type="text/css" media="all">
 
 <!-- progressbar -->
-<link rel="stylesheet" href="js/progressbar/ui.progress-bar.css">
+<link rel="stylesheet" href="../js/progressbar/ui.progress-bar.css">
 
 
 </head>
@@ -60,14 +60,14 @@
         <!-- HEADER -->
         <header id="header">
 
-            <div id="trueHeader">
+            <div id="trueHeader" style="background-color: palevioletred; !important">
 
                 <div class="wrapper">
 
                     <div class="container">
 
                         <!-- Logo -->
-                        <div class="logo_main"><a href="index.html" id="logo"></a></div>
+                        <div class="logo_main"><a href="ch_index.html" id="logo"></a></div>
 
                         <!-- Menu -->
                         <div class="menu_main">
@@ -78,7 +78,7 @@
 
                                     <ul id="tiny">
 
-                                        <li><a href="index">Home</a></li>
+                                        <li><a href="ch_index">Home</a></li>
 
                                         <li><a href="wedo" target="_self">What We Do <i class="fa"></i></a>
 
@@ -92,10 +92,10 @@
                                         <li><a href="http://wordpress.com/echeckid">Blog </a></li>
                                         <li><a href="contact" class="active">Contact</a></li>
 
-                                        <li style="color: #000000; height: 80px !important"><a href="#">English <i class="fa fa-angle-down"></i></a>
+                                        <li style="color: #000000; height: 80px !important"><a href="#">Chinese <i class="fa fa-angle-down"></i></a>
 
-                                            <ul style="width:120px; overflow: hidden; !important">
-                                                <li style="width: 25px !important"><a href="chn/ch_index.html">Chinese</a></li>
+                                            <ul style="width:115px; overflow: hidden; !important">
+                                                <li style="width: 25px !important"><a href="../index.html">English</a></li>
                                             </ul>
                                         </li>
                                     </ul>
@@ -151,7 +151,7 @@
 
                         </ul>
                         <ul class="">
-                            <img src="images/h-lines1.png" alt=""/>
+                            <img src="../images/h-lines1.png" alt=""/>
                         </ul>
 
 
@@ -230,19 +230,19 @@
 
 <!-- ######### JS FILES ######### -->
 <!-- get jQuery from the google apis -->
-<script type="text/javascript" src="js/universal/jquery.js"></script>
+<script type="text/javascript" src="../js/universal/jquery.js"></script>
 
 <!-- style switcher -->
-<script src="js/style-switcher/jquery-1.js"></script>
-<script src="js/style-switcher/styleselector.js"></script>
+<script src="../js/style-switcher/jquery-1.js"></script>
+<script src="../js/style-switcher/styleselector.js"></script>
 
 <!-- main menu -->
-<script type="text/javascript" src="js/mainmenu/ddsmoothmenu.js"></script>
-<script type="text/javascript" src="js/mainmenu/jquery-1.7.1.min.js"></script>
-<script type="text/javascript" src="js/mainmenu/selectnav.js"></script>
+<script type="text/javascript" src="../js/mainmenu/ddsmoothmenu.js"></script>
+<script type="text/javascript" src="../js/mainmenu/jquery-1.7.1.min.js"></script>
+<script type="text/javascript" src="../js/mainmenu/selectnav.js"></script>
 
 <!-- progress bar -->
-<script src="js/progressbar/progress.js" type="text/javascript" charset="utf-8"></script>
+<script src="../js/progressbar/progress.js" type="text/javascript" charset="utf-8"></script>
 
 <script type="text/javascript">
 
@@ -259,9 +259,9 @@
 </script>
 
 <!-- jquery jcarousel -->
-<script type="text/javascript" src="js/jcarousel/jquery.jcarousel.min.js"></script>
+<script type="text/javascript" src="../js/jcarousel/jquery.jcarousel.min.js"></script>
 
-<script type="text/javascript" src="js/mainmenu/scripts.js"></script>
+<script type="text/javascript" src="../js/mainmenu/scripts.js"></script>
 
 <!-- scroll up -->
 <script type="text/javascript">
@@ -284,10 +284,10 @@
 </script>
 
 <!-- accordion -->
-<script type="text/javascript" src="js/accordion/custom.js"></script>
+<script type="text/javascript" src="../js/accordion/custom.js"></script>
 
-<script type="text/javascript" src="js/sticky-menu/core.js"></script>
-<script type="text/javascript" src="js/sticky-menu/modernizr.custom.75180.js"></script>
+<script type="text/javascript" src="../js/sticky-menu/core.js"></script>
+<script type="text/javascript" src="../js/sticky-menu/modernizr.custom.75180.js"></script>
 
 
 
