--- a/public/chn/wedo.html
+++ b/public/chn/wedo.html
@@ -12,7 +12,7 @@
     <meta name="description" content="" />
 
     <!-- Favicon -->
-    <link rel="shortcut icon" href="images/favicon.ico">
+    <link rel="shortcut icon" href="../images/favicon.ico">
 
     <!-- this styles only adds some repairs on idevices  -->
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
@@ -26,26 +26,26 @@
 
     <!-- ######### CSS STYLES ######### -->
 
-    <link rel="stylesheet" href="css/reset.css" type="text/css" />
-    <link rel="stylesheet" href="css/style.css" type="text/css" />
+    <link rel="stylesheet" href="../css/reset.css" type="text/css" />
+    <link rel="stylesheet" href="../css/style.css" type="text/css" />
 
-    <link rel="stylesheet" href="css/font-awesome/css/font-awesome.min.css">
+    <link rel="stylesheet" href="../css/font-awesome/css/font-awesome.min.css">
 
     <!-- responsive devices styles -->
-    <link rel="stylesheet" media="screen" href="css/responsive-leyouts.css" type="text/css" />
+    <link rel="stylesheet" media="screen" href="../css/responsive-leyouts.css" type="text/css" />
 
     <!-- style switcher -->
-    <link rel = "stylesheet" media = "screen" href = "js/style-switcher/color-switcher.css" />
+    <link rel = "stylesheet" media = "screen" href = "../js/style-switcher/color-switcher.css" />
 
     <!-- sticky menu -->
-    <link rel="stylesheet" href="js/sticky-menu/core.css">
+    <link rel="stylesheet" href="../js/sticky-menu/core.css">
 
     <!-- jquery jcarousel -->
-    <link rel="stylesheet" type="text/css" href="js/jcarousel/skin.css" />
-    <link rel="stylesheet" type="text/css" href="js/jcarousel/skin2.css" />
+    <link rel="stylesheet" type="text/css" href="../js/jcarousel/skin.css" />
+    <link rel="stylesheet" type="text/css" href="../js/jcarousel/skin2.css" />
 
     <!-- faqs -->
-    <link rel="stylesheet" href="js/accordion/accordion.css" type="text/css" media="all">
+    <link rel="stylesheet" href="../js/accordion/accordion.css" type="text/css" media="all">
 
 
 </head>
@@ -60,14 +60,14 @@
 <!-- HEADER -->
 <header id="header">
 
-    <div id="trueHeader">
+    <div id="trueHeader" style="background-color: palevioletred; !important">
 
         <div class="wrapper">
 
             <div class="container">
 
                 <!-- Logo -->
-                <div class="logo_main"><a href="index.html" id="logo"></a></div>
+                <div class="logo_main"><a href="ch_index.html" id="logo"></a></div>
 
                 <!-- Menu -->
                 <div class="menu_main">
@@ -78,7 +78,7 @@
 
                             <ul id="tiny">
 
-                                <li><a href="index" class="">Home</a></li>
+                                <li><a href="ch_index.html" class="">Home</a></li>
 
                                 <li><a href="wedo" target="_self" class="active">What We Do <i class="fa"></i></a>
 
@@ -92,10 +92,10 @@
                                 <li><a href="http://wordpress.com/echeckid">Blog </a></li>
                                 <li><a href="contact">Contact</a></li>
 
-                                <li style="color: #000000; !important"><a href="#">English <i class="fa fa-angle-down"></i></a>
+                                <li style="color: #000000; height: 80px !important"><a href="#">Chinese <i class="fa fa-angle-down"></i></a>
 
-                                    <ul style="width:120px; overflow: hidden; !important">
-                                        <li style="width: 25px !important"><a href="chn/ch_index.html">Chinese</a></li>
+                                    <ul style="width:115px; overflow: hidden; !important">
+                                        <li style="width: 25px !important"><a href="../index.html">English</a></li>
                                     </ul>
                                 </li>
 
@@ -151,7 +151,7 @@
 
                 <br/><br/>
                 <div class="center">
-                    <img src="images/what_we_do.png" alt="" style="width: 100%; height: 80%; text-align:center !important"/>
+                    <img src="../images/what_we_do.png" alt="" style="width: 100%; height: 80%; text-align:center !important"/>
                 </div>
             </div>
         </div>
@@ -300,25 +300,25 @@
 <!-- ######### JS FILES ######### -->
 
 <!-- get jQuery from the google apis -->
-<script type="text/javascript" src="js/universal/jquery.js"></script>
+<script type="text/javascript" src="../js/universal/jquery.js"></script>
 
 <!-- style switcher -->
-<script src="js/style-switcher/jquery-1.js"></script>
-<script src="js/style-switcher/styleselector.js"></script>
+<script src="../js/style-switcher/jquery-1.js"></script>
+<script src="../js/style-switcher/styleselector.js"></script>
 
 <!-- main menu -->
-<script type="text/javascript" src="js/mainmenu/ddsmoothmenu.js"></script>
-<script type="text/javascript" src="js/mainmenu/jquery-1.7.1.min.js"></script>
-<script type="text/javascript" src="js/mainmenu/selectnav.js"></script>
+<script type="text/javascript" src="../js/mainmenu/ddsmoothmenu.js"></script>
+<script type="text/javascript" src="../js/mainmenu/jquery-1.7.1.min.js"></script>
+<script type="text/javascript" src="../js/mainmenu/selectnav.js"></script>
 
 <!-- jquery jcarousel -->
-<script type="text/javascript" src="js/jcarousel/jquery.jcarousel.min.js"></script>
+<script type="text/javascript" src="../js/jcarousel/jquery.jcarousel.min.js"></script>
 
 <!-- SLIDER REVOLUTION 4.x SCRIPTS  -->
-<script type="text/javascript" src="js/revolutionslider/rs-plugin/js/jquery.themepunch.plugins.min.js"></script>
-<script type="text/javascript" src="js/revolutionslider/rs-plugin/js/jquery.themepunch.revolution.min.js"></script>
+<script type="text/javascript" src="../js/revolutionslider/rs-plugin/js/jquery.themepunch.plugins.min.js"></script>
+<script type="text/javascript" src="../js/revolutionslider/rs-plugin/js/jquery.themepunch.revolution.min.js"></script>
 
-<script type="text/javascript" src="js/mainmenu/scripts.js"></script>
+<script type="text/javascript" src="../js/mainmenu/scripts.js"></script>
 
 <!-- scroll up -->
 <script type="text/javascript">
@@ -342,7 +342,7 @@
 
 
 <!-- accordion -->
-<script type="text/javascript" src="js/accordion/custom.js"></script>
+<script type="text/javascript" src="../js/accordion/custom.js"></script>
 
 <!-- REVOLUTION SLIDER -->
 <script type="text/javascript">
@@ -363,8 +363,8 @@
 
 </script>
 
-<script type="text/javascript" src="js/sticky-menu/core.js"></script>
-<script type="text/javascript" src="js/sticky-menu/modernizr.custom.75180.js"></script>
+<script type="text/javascript" src="../js/sticky-menu/core.js"></script>
+<script type="text/javascript" src="../js/sticky-menu/modernizr.custom.75180.js"></script>
 
 
 
