--- a/public/chn/about.html
+++ b/public/chn/about.html
@@ -60,7 +60,7 @@
 <!-- HEADER -->
 <header id="header">
 
-    <div id="trueHeader" style="background-color: palevioletred; !important">
+    <div id="trueHeader">
 
         <div class="wrapper">
 
@@ -89,7 +89,7 @@
 
                                 </li>
 
-                                <li><a href="http://wordpress.com/echeckid">Blog </a></li>
+                                <li><a href="http://wordpress.com/echeckid" target="_blank">Blog </a></li>
                                 <li><a href="contact">Contact</a></li>
 
                                 <li style="color: #000000; height: 80px !important"><a href="#">Chinese <i class="fa fa-angle-down"></i></a>
