--- a/public/chn/contact.html
+++ b/public/chn/contact.html
@@ -29,7 +29,7 @@
 <link rel="stylesheet" href="../css/reset.css" type="text/css" />
 <link rel="stylesheet" href="../css/style.css" type="text/css" />
 
-<link rel="stylesheet" href="../css/font-awesome/../css/font-awesome.min.css">
+<link rel="stylesheet" href="../css/font-awesome/css/font-awesome.min.css" type="text/css"/>
 
 <!-- responsive devices styles -->
 <link rel="stylesheet" media="screen" href="../css/responsive-leyouts.css" type="text/css" />
@@ -60,7 +60,7 @@
         <!-- HEADER -->
         <header id="header">
 
-            <div id="trueHeader" style="background-color: palevioletred; !important">
+            <div id="trueHeader">
 
                 <div class="wrapper">
 
@@ -78,19 +78,19 @@
 
                                     <ul id="tiny">
 
-                                        <li><a href="ch_index">Home</a></li>
+                                        <li><a href="ch_index.html">Home</a></li>
 
-                                        <li><a href="wedo" target="_self">What We Do <i class="fa"></i></a>
+                                        <li><a href="wedo.html" target="_self">What We Do <i class="fa"></i></a>
 
-
-                                        </li>
-
-                                        <li><a href="about" class="">About Us <i class="fa"></i></a>
 
                                         </li>
 
-                                        <li><a href="http://wordpress.com/echeckid">Blog </a></li>
-                                        <li><a href="contact" class="active">Contact</a></li>
+                                        <li><a href="about.html" class="">About Us <i class="fa"></i></a>
+
+                                        </li>
+
+                                        <li><a href="http://wordpress.com/echeckid" target="_blank">Blog </a></li>
+                                        <li><a href="contact.html" class="active">Contact</a></li>
 
                                         <li style="color: #000000; height: 80px !important"><a href="#">Chinese <i class="fa fa-angle-down"></i></a>
 
@@ -114,14 +114,10 @@
 
         </header><!-- end header -->
 
-<body>
 
 <div class="wrapper_boxed">
 
     <div class="site_wrapper">
-
-
-
 
         <div class="clearfix"></div>
 
@@ -129,9 +125,7 @@
         <div class="clearfix"></div>
 
         <div class="joosa punch_text01">
-            <div class="container">
-
-            </div>
+            <div class="container">            </div>
         </div><!-- end punch text section -->
 
         <div class="carve_graph_02"></div>
@@ -186,11 +180,14 @@
 
             </div>
         </div><!-- end bottom section -->
+        </div>
+    </div>
 
 
 
         <div class="joosa bottom_section">
-        </div><!-- end bottom section -->
+        </div>
+        <!-- end bottom section -->
 
         <div class="clearfix mar_top5"></div>
 
