--- a/public/contact.html
+++ b/public/contact.html
@@ -78,19 +78,19 @@
 
                                     <ul id="tiny">
 
-                                        <li><a href="index">Home</a></li>
+                                        <li><a href="index.html">Home</a></li>
 
-                                        <li><a href="wedo" target="_self">What We Do <i class="fa"></i></a>
+                                        <li><a href="wedo.html" target="_self">What We Do <i class="fa"></i></a>
 
-
-                                        </li>
-
-                                        <li><a href="about" class="">About Us <i class="fa"></i></a>
 
                                         </li>
 
-                                        <li><a href="http://wordpress.com/echeckid">Blog </a></li>
-                                        <li><a href="contact" class="active">Contact</a></li>
+                                        <li><a href="about.html" class="">About Us <i class="fa"></i></a>
+
+                                        </li>
+
+                                        <li><a href="http://wordpress.com/echeckid" target="_blank">Blog </a></li>
+                                        <li><a href="contact.html" class="active">Contact</a></li>
 
                                         <li style="color: #000000; height: 80px !important"><a href="#">English <i class="fa fa-angle-down"></i></a>
 
@@ -114,7 +114,6 @@
 
         </header><!-- end header -->
 
-<body>
 
 <div class="wrapper_boxed">
 
@@ -186,6 +185,8 @@
 
             </div>
         </div><!-- end bottom section -->
+        </div>
+    </div>
 
 
 
@@ -221,9 +222,9 @@
         </div><!-- end copyright info -->
 
 
+</div>
+</div>
 
-</div>
-</div>
 
 
 
