--- a/public/index.html
+++ b/public/index.html
@@ -91,7 +91,7 @@
 
                     </li>
 
-                    <li><a href="http://wordpress.com/echeckid">Blog </a></li>
+                    <li><a href="http://wordpress.com/echeckid" target="_blank">Blog </a></li>
                     <li><a href="contact">Contact</a></li>
 
                     <li style="color: #000000; !important"><a href="#">English <i class="fa fa-angle-down"></i></a>
@@ -157,7 +157,7 @@
 						data-endspeed="300"
 						data-endeasing="Power1.easeIn"
 						data-captionhidden="on"
-						style="z-index: 6; font-size: 40px !important;">Mobile platform for
+						style="z-index: 6; font-size: 40px !important;">Address Concern For
 					</div>
 
 					<div class="tp-caption large_bold_white customin ltl"
@@ -214,22 +214,54 @@
 				</li>
 
                 <!-- SLIDE 2 -->
-				<li data-transition="zoomout" data-slotamount="7" data-masterspeed="900" >
+                <li data-transition="slidedown" data-slotamount="7" data-masterspeed="900" >
 
-					<img src="images/sliders/image2.png" alt="slidebg1"  data-bgfit="cover" data-bgposition="center top" data-bgrepeat="no-repeat">
+                    <img src="images/sliders/image1.png" alt="slidebg1"  data-bgfit="cover" data-bgposition="center top" data-bgrepeat="no-repeat">
 
-					<div class="tp-caption mediumlarge_light_white skewfromleft customout"
-						data-x="right"
-                        data-y="30"
-						data-customin="x:50;y:150;z:0;rotationX:0;rotationY:0;rotationZ:0;scaleX:0.5;scaleY:0.5;skewX:0;skewY:0;opacity:0;transformPerspective:0;transformOrigin:50% 50%;"
-						data-customout="x:0;y:0;z:0;rotationX:0;rotationY:0;rotationZ:0;scaleX:0.75;scaleY:0.75;skewX:0;skewY:0;opacity:0;transformPerspective:600;transformOrigin:50% 50%;"
-						data-speed="800"
-						data-start="1300"
-						data-easing="Power4.easeOut"
-						data-endspeed="500"
-						data-endeasing="Power4.easeIn"
-                        style="z-index: 6; font-size: 30px !important;">Mobile platform for
-					</div>
+                    <div class="tp-caption mediumlarge_light_white skewfromleft customout"
+                         data-x="10"
+                         data-y="70"
+                         data-customout="x:0;y:0;z:0;rotationX:0;rotationY:0;rotationZ:0;scaleX:0.75;scaleY:0.75;skewX:0;skewY:0;opacity:0;transformPerspective:600;transformOrigin:50% 50%;"
+                         data-speed="800"
+                         data-start="1000"
+                         data-easing="Power4.easeOut"
+                         data-endspeed="300"
+                         data-endeasing="Power1.easeIn"
+                         data-captionhidden="on"
+                         style="z-index: 6; font-size: 50px !important;">Deliver
+                    </div>
+
+                    <div class="tp-caption large_bold_white customin ltl"
+                         data-x="0"
+                         data-y="150"
+                         data-customin="x:0;y:0;z:0;rotationX:90;rotationY:0;rotationZ:0;scaleX:1;scaleY:1;skewX:0;skewY:0;opacity:0;transformPerspective:200;transformOrigin:50% 0%;"
+                         data-speed="1000"
+                         data-start="1600"
+                         data-easing="Back.easeInOut"
+                         data-endspeed="400"
+                         data-endeasing="Back.easeIn"
+                         style="z-index: 14; font-size: 38px !important;"><strong>Product Information & <br/> Promotion </strong>
+                    </div>
+                </li>
+
+
+                <!-- SLIDE 3 -->
+                <li data-transition="zoomout" data-slotamount="7" data-masterspeed="900" >
+
+                    <img src="images/sliders/image2.png" alt="slidebg1"  data-bgfit="cover" data-bgposition="center top" data-bgrepeat="no-repeat">
+
+                    <div class="tp-caption mediumlarge_light_white skewfromleft customout"
+                         data-x="right"
+                         data-y="30"
+                         data-customin="x:50;y:150;z:0;rotationX:0;rotationY:0;rotationZ:0;scaleX:0.5;scaleY:0.5;skewX:0;skewY:0;opacity:0;transformPerspective:0;transformOrigin:50% 50%;"
+                         data-customout="x:0;y:0;z:0;rotationX:0;rotationY:0;rotationZ:0;scaleX:0.75;scaleY:0.75;skewX:0;skewY:0;opacity:0;transformPerspective:600;transformOrigin:50% 50%;"
+                         data-speed="800"
+                         data-start="1300"
+                         data-easing="Power4.easeOut"
+                         data-endspeed="500"
+                         data-endeasing="Power4.easeIn"
+                         style="z-index: 6; font-size: 30px !important;">Establish Direct
+                    </div>
 
 
 
@@ -258,54 +290,7 @@
                          style="z-index: 2; font-size: 50px !important;"> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<strong> Interactions</strong>
                     </div>
 
-				</li>
-
-                <!-- SLIDE 3 -->
-				<li data-transition="slidedown" data-slotamount="7" data-masterspeed="900" >
-
-					<img src="images/sliders/image1.png" alt="slidebg1"  data-bgfit="cover" data-bgposition="center top" data-bgrepeat="no-repeat">
-
-					<div class="tp-caption mediumlarge_light_white skewfromleft customout"
-						data-x="10"
-						data-y="70"
-						data-customout="x:0;y:0;z:0;rotationX:0;rotationY:0;rotationZ:0;scaleX:0.75;scaleY:0.75;skewX:0;skewY:0;opacity:0;transformPerspective:600;transformOrigin:50% 50%;"
-						data-speed="800"
-						data-start="1000"
-						data-easing="Power4.easeOut"
-						data-endspeed="300"
-						data-endeasing="Power1.easeIn"
-						data-captionhidden="on"
-						style="z-index: 6; font-size: 30px !important;">Mobile platform for
-					</div>
-
-                    <div class="tp-caption large_bold_white customin ltl"
-                         data-x="0"
-                         data-y="180"
-                         data-customin="x:0;y:0;z:0;rotationX:90;rotationY:0;rotationZ:0;scaleX:1;scaleY:1;skewX:0;skewY:0;opacity:0;transformPerspective:200;transformOrigin:50% 0%;"
-                         data-speed="1000"
-                         data-start="1600"
-                         data-easing="Back.easeInOut"
-                         data-endspeed="400"
-                         data-endeasing="Back.easeIn"
-                         style="z-index: 14; font-size: 50px !important;"><strong> &nbsp;&nbsp;Marketing & </strong>
-                    </div>
-
-                    <div class="tp-caption large_bold_white skewfromrightshort customout"
-                         data-x="0"
-                         data-y="280"
-                         data-customout="x:0;y:0;z:0;rotationX:0;rotationY:0;rotationZ:0;scaleX:0.75;scaleY:0.75;skewX:0;skewY:0;opacity:0;transformPerspective:600;transformOrigin:50% 50%;"
-                         data-speed="500"
-                         data-start="2200"
-                         data-easing="Power4.easeOut"
-                         data-endspeed="500"
-                         data-endeasing="Power4.easeIn"
-                         data-captionhidden="on"
-                         style="z-index: 2; font-size: 50px !important;"> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<strong> Promotion</strong>
-                    </div>
-
-
-
-				</li>
+                </li>
 
 
 			</ul>
@@ -335,27 +320,122 @@
 
         <div class="one_half">
 
-            <div id='basic-modal'> <a href='#' class='basic'> <h2>for <strong>Consumers</strong></h2> </a></div>
-            <br/><br/>
-                <p>
-                    <img src="images/for_con.png" style="width: 100%; height: 100%"/>
-                </p>
+            <div class="accordion">
+
+                <!-- section 1 -->
+
+                <span class="acc-trigger" title="click header to collapse; image to expand"><a href="#"><h2>for <strong>Consumers</strong></h2></a></span>
+                <div class="acc-container">
+                    <div class="content"></div>
+                    <span class="acc-trigger" style="width: 100%"></span>
+                </div>
+
+                <span class="acc-trigger active"><a href="#"><img src="images/for_con.png" style="width: 100%;" title="click image to expand; header to collapse"></a></span>
+                <div class="acc-container">
+                    <div class="content">
+                        <p>
+                            eCheckID mobile product information platform enables consumers to consume with confidence by providing real-time information on authenticity, expiry, allergens,
+                            and/or recall status of health sensitive or other consumer packaged products.  A simple scan of the eCheckID 2D barcode on the product packaging using the eCheckID
+                            app offers consumers immediate access to authenticity and safety information of each unit of product they purchase or consume.  Consumers do not have to enter a
+                            complex string of alphanumerical characters onto the brands’ web site to determine authenticity, or try to check the holographic sticker or the printing on the packaging
+                            to guess the authenticity of a particular unit.
+                        </p><br/>
+
+                        <p>
+                            Unlike regular UPC or other marketing oriented 2D bar code, the eCheckID code contains encrypted, hard to counterfeit product identification information
+                            that identifies each specific unit of the product.  Once scanned, critical up to date information―like safety recall―specific to the unit of product in the consumer’s
+                            possession is delivered instantaneously to the consumer’s mobile device.  Consumer with certain allergic condition can be warned of the presence of allergens in the product
+                            like lactose, tree nuts, glutens, shell fish, etc.
+                        </p><br/>
+
+                        <p>
+                            Additional written product information, video or sound recording of usage ideas like recipe, usage direction, or comments from other customers or experts
+                            can be delivered directly to the consumer's smart phone or tablet to enhance consumer's appreciation of the product's benefits.
+                        </p><br/>
+
+
+                    </div>
+                </div>
+
+
+            </div>
+
 
 
         </div><!-- end new section -->
 
 
         <div class="one_half last">
+            <div class="accordion">
 
-        <div id='basic-modal1'> <a href='#' class='basic'><h2>for <strong>Brands</strong></h2> </a></div>
+                <!-- section 1 -->
 
-            <br/><br/>
-                <p>
-                    <img src="images/for_bra.png" style="width: 100%; height: 100%"/>
-                </p>
+                <span class="acc-trigger1" title="click header to collapse; image to expand"><a href="#"><h2>for <strong>Brands</strong></h2></a></span>
+                <div class="acc-container1">
+                    <div class="content"></div>
+                    <span class="acc-trigger1" style="width: 100%"></span>
+                </div>
+
+                <span class="acc-trigger1 active"><a href="#"><img src="images/for_bra.png" style="width: 100%;" title="click image to expand; header to collapse"></a></span>
+                <div class="acc-container1">
+                    <div class="content">
+                        <p>
+                            eCheckID provides an easy-to-deploy service for brands to improve their brand equity
+
+                            by making their products harder to counterfeit and giving them a conduit for real-time
+
+                            consumer interaction. Critical product safety information, cross-sell, up-sell or discount
+
+                            offers can be sent directly to targeted consumers. Loyalty and rebate programs can also
+
+                            be implemented using the eCheckID app. Brand owners can obtain critical usage and
+
+                            registration information about the consumers, as well as analytics about the efficacy
+
+                            of promotional offers, location and density of counterfeit products, or the diversion of
+
+                            products from authorized channel of distribution. <br/><br/>
+
+                            These services are enabled through eCheckID’s cloud service and individualized product
+
+                            tracking using a unique label created from an encrypted digital signature that cannot be
+
+                            duplicated by counterfeiters. Once scanned by the eCheckID app on the consumers’ mobile
+
+                            device, the barcode is translated and decrypted by the eCheckID cloud service. In response,
+
+                            product authenticity and other information related to the unit of product are sent to the
+
+                            consumers’ mobile device. If the consumer chooses to register their ownership of the
+
+                            product, key registration information will be recorded in eCheckid’s central cloud service.
+
+                            eCheckID also analyzes data collected to deliver actionable information about the pattern
+
+                            and location of consumption, location and density of counterfeit products, and diversion of
+
+                            products from legitimate channels. <br/><br/>
+
+                            The eCheckID solution is delivered as a cloud-service so it is very easy to deploy. In
+
+                            addition, the eCheckID barcode that uniquely identifies each unit of product can be
+
+                            designed with embedded logo and color scheme that enhances the brand identity of the
+
+                            product.
+                            <br/>
+
+
+
+                    </div>
+                </div>
+
+
+            </div>
 
         </div><!-- end people says section -->
 
+        <img src="images/h-lines1.png" width="100%  " alt=""/>
 
     </div>
 </div><!-- end bottom section -->
@@ -403,109 +483,6 @@
 
     
 <!-- ######### JS FILES ######### -->
-<!-- modal content -->
-<div id="basic-modal-content">
-    <h3><emphasis>for Consumers</emphasis></h3>
-    With the proliferation of counterfeit goods and ingestible products worldwide, consumers
-
-    need a real-time system to verify the authenticity, source, expiration date, allergens, or
-
-    recall status of products. Legacy methods of assuring product authenticity, like affixing
-
-    holographic stickers to product packaging, are unreliable and easily forged. In addition,
-
-    current packaging is static and does not provide real-time status, information, or marketing
-
-    messages relevant to a product at the time of consumption. For instance, the real-time
-
-    recall status of a particular unit of ingestible product is of interest to a consumer who
-
-    wants to avoid potential illness.
-
-    <br/><br/>
-
-    eCheckID’s real-time system provides an integrated application for product information
-
-    and authenticity, promotional offers, recall status, social interaction, and a direct conduit
-
-    to the manufacturer. Each product is marked with a unique identifying label, and a
-
-    simple scan of this label with a mobile device provides the consumer current information.
-
-    Following, or registering, a product is as easy as clicking a button and will provide the
-
-    consumer with recalls and other relevant promotions or marketing messages that can be
-
-    pushed to user’s mobile devices by the manufacturer in real-time.
-    <br/><br/>
-
-    Consumers can take advantage of promotional offers (if any) including loyalty program,
-
-    rebate, discount for complementary products, or lottery.
-
-    The eCheckID app is also integrated with social networks like Facebook and Twitter. This
-
-    allows consumers to interact with their social networks and comment about the product.
-
-    All these services are provided in a real-time, seamless manner with no need to fill out web
-
-    or paper forms.
-    <br/>
-</div>
-
-<div id="basic-modal1-content">
-    <h3><emphasis>for Brands</emphasis></h3>
-    eCheckID provides an easy-to-deploy service for brands to improve their brand equity
-
-    by making their products harder to counterfeit and giving them a conduit for real-time
-
-    consumer interaction. Critical product safety information, cross-sell, up-sell or discount
-
-    offers can be sent directly to targeted consumers. Loyalty and rebate programs can also
-
-    be implemented using the eCheckID app. Brand owners can obtain critical usage and
-
-    registration information about the consumers, as well as analytics about the efficacy
-
-    of promotional offers, location and density of counterfeit products, or the diversion of
-
-    products from authorized channel of distribution. <br/><br/>
-
-    These services are enabled through eCheckID’s cloud service and individualized product
-
-    tracking using a unique label created from an encrypted digital signature that cannot be
-
-    duplicated by counterfeiters. Once scanned by the eCheckID app on the consumers’ mobile
-
-    device, the barcode is translated and decrypted by the eCheckID cloud service. In response,
-
-    product authenticity and other information related to the unit of product are sent to the
-
-    consumers’ mobile device. If the consumer chooses to register their ownership of the
-
-    product, key registration information will be recorded in eCheckid’s central cloud service.
-
-    eCheckID also analyzes data collected to deliver actionable information about the pattern
-
-    and location of consumption, location and density of counterfeit products, and diversion of
-
-    products from legitimate channels. <br/><br/>
-
-    The eCheckID solution is delivered as a cloud-service so it is very easy to deploy. In
-
-    addition, the eCheckID barcode that uniquely identifies each unit of product can be
-
-    designed with embedded logo and color scheme that enhances the brand identity of the
-
-    product.
-    <br/>
-</div>
-
-<!-- preload the images -->
-<div style='display:none'>
-    <img src='images/x.png' alt='' />
-</div>
-
 
 <!-- get jQuery from the google apis -->
 <script type="text/javascript" src="js/universal/jquery.js"></script>
