first task on chinese translation

--- a/public/chn/ch_index.html
+++ b/public/chn/ch_index.html
@@ -25,6 +25,8 @@
     <![endif]-->
 
     <!-- ######### CSS STYLES ######### -->
+    <!-- language font -->
+    <link rel="stylesheet" href="../css/notosans.css" type="text/css"/>
 
     <link rel="stylesheet" href="../css/reset.css" type="text/css" />
     <link rel="stylesheet" href="../css/style.css" type="text/css" />
@@ -72,7 +74,7 @@
                 <div class="logo_main"><a href="index.html" id="logo"></a></div>
 
                 <!-- Menu -->
-                <div class="menu_main">
+                <div class="menu_main" style="font-family: NotoSansTraditional; !important">
 
                     <nav id="access" class="access" role="navigation">
 
@@ -80,19 +82,19 @@
 
                             <ul id="tiny">
 
-                                <li><a href="ch_index" class="active">Home</a></li>
+                                <li><a href="ch_index" class="active">主頁</a></li>
 
-                                <li><a href="wedo" target="_self">What We Do <i class="fa"></i></a>
+                                <li><a href="wedo" target="_self">我们的业务<i class="fa"></i></a>
 
-
-                                </li>
-
-                                <li><a href="about">About Us <i class="fa"></i></a>
 
                                 </li>
 
-                                <li><a href="http://wordpress.com/echeckid" target="_blank">Blog </a></li>
-                                <li><a href="contact">Contact</a></li>
+                                <li><a href="about">关于我们<i class="fa"></i></a>
+
+                                </li>
+
+                                <li><a href="http://wordpress.com/echeckid" target="_blank">博客 </a></li>
+                                <li><a href="contact">联络我们</a></li>
 
                                 <li style="color: #000000; !important"><a href="#">English <i class="fa fa-angle-down"></i></a>
 
