--- a/public/chn/contact.html
+++ b/public/chn/contact.html
@@ -70,7 +70,7 @@
                         <div class="logo_main"><a href="ch_index.html" id="logo"></a></div>
 
                         <!-- Menu -->
-                        <div class="menu_main">
+                        <div class="menu_main" style="font-family: NotoSansTraditional; !important">
 
                             <nav id="access" class="access" role="navigation">
 
@@ -78,19 +78,19 @@
 
                                     <ul id="tiny">
 
-                                        <li><a href="ch_index.html">Home</a></li>
+                                        <li><a href="ch_index.html">主頁</a></li>
 
-                                        <li><a href="wedo.html" target="_self">What We Do <i class="fa"></i></a>
+                                        <li><a href="wedo.html" target="_self">我们的业务 <i class="fa"></i></a>
 
-
-                                        </li>
-
-                                        <li><a href="about.html" class="">About Us <i class="fa"></i></a>
 
                                         </li>
 
-                                        <li><a href="http://wordpress.com/echeckid" target="_blank">Blog </a></li>
-                                        <li><a href="contact.html" class="active">Contact</a></li>
+                                        <li><a href="about.html" class="">关于我们<i class="fa"></i></a>
+
+                                        </li>
+
+                                        <li><a href="http://wordpress.com/echeckid" target="_blank">博客</a></li>
+                                        <li><a href="contact.html" class="active">联络我们</a></li>
 
                                         <li style="color: #000000; height: 80px !important"><a href="#">Chinese <i class="fa fa-angle-down"></i></a>
 
@@ -135,12 +135,12 @@
         <div class="joosa bottom_section">
             <div class="container">
 
-                <div class="one_full">
+                <div class="one_full" style="font-family: NotoSansTraditional; !important">
                     <h2>Contact us</h2>
                     <br/><br/>
 
                         <ul class="address-info">
-                            <li><i class="fa fa-map-marker fa-lg"></i>&nbsp; 751 Warrington Ave,<br />&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Redwood City, CA 94063</li>
+                            <li><i class="fa fa-map-marker fa-lg"></i>&nbsp; 中国北京市朝阳区 <br />&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;三里屯SOHO办公A座705室</li>
                             <li><i class="fa fa-mail-reply-all fa-lg"></i> <a href="mailto:info@echeckid.com">&nbsp;info@echeckid.com</a></li>
 
                         </ul>
@@ -152,23 +152,23 @@
 
                     <div class="comment_form">
 
-                        <h4><i>Leave a Comment</i></h4>
+                        <h4><i>留下评论</i></h4>
 
                         <form action="mailto:info@echeckid.com" method="post" enctype="text/plain">
                             <input type="text" name="yourname" id="name" class="comment_input_bg" />
-                            <label for="name">Name*</label>
+                            <label for="name">姓名</label>
 
                             <input type="text" name="email" id="mail" class="comment_input_bg" />
-                            <label for="mail">Email*</label>
+                            <label for="mail">电邮</label>
 
                             <input type="text" name="company" id="company" class="comment_input_bg" />
-                            <label for="company">Company*</label>
+                            <label for="company">工作单位</label>
 
                             <textarea name="comment" class="comment_textarea_bg" rows="20" cols="7" ></textarea>
                             <div class="clearfix"></div>
-                            <input name="send" type="submit" value="Submit" class="comment_submit"/>
+                            <input name="send" type="submit" value="提交" class="comment_submit"/>
                             <p></p>
-                            <p class="comment_checkbox"><input type="checkbox" name="check" /> Notify me of followup comments via e-mail</p>
+                            <p class="comment_checkbox"><input type="checkbox" name="check" /> 通过电子邮件通知我后续的评论</p>
 
 
                         </form>
