--- a/public/chn/wedo.html
+++ b/public/chn/wedo.html
@@ -70,7 +70,7 @@
                 <div class="logo_main"><a href="ch_index.html" id="logo"></a></div>
 
                 <!-- Menu -->
-                <div class="menu_main">
+                <div class="menu_main" style="font-family: NotoSansTraditional; !important">
 
                     <nav id="access" class="access" role="navigation">
 
@@ -78,19 +78,19 @@
 
                             <ul id="tiny">
 
-                                <li><a href="ch_index.html" class="">Home</a></li>
+                                <li><a href="ch_index.html" class="">主頁</a></li>
 
-                                <li><a href="wedo" target="_self" class="active">What We Do <i class="fa"></i></a>
+                                <li><a href="wedo" target="_self" class="active">我们的业务<i class="fa"></i></a>
 
-
-                                </li>
-
-                                <li><a href="about">About Us <i class="fa"></i></a>
 
                                 </li>
 
-                                <li><a href="http://wordpress.com/echeckid" target="_blank">Blog </a></li>
-                                <li><a href="contact">Contact</a></li>
+                                <li><a href="about">关于我们<i class="fa"></i></a>
+
+                                </li>
+
+                                <li><a href="http://wordpress.com/echeckid" target="_blank">博客 </a></li>
+                                <li><a href="contact">联络我们</a></li>
 
                                 <li style="color: #000000; height: 80px !important"><a href="#">Chinese <i class="fa fa-angle-down"></i></a>
 
